# libjdwp

./: CMakeLists.txt
.github/workflows/: build-test.yml
include/: jdwp.h
include/msg/: reference_type.h  virtual_machine.h
src/: CMakeLists.txt  serde.c  serde.h
src/msg/: CMakeLists.txt  client.c  client.h  command.c  command.h  reply.c  reply.h
src/msg/reference_type/: CMakeLists.txt  class_loader.c  class_loader.h  fields.c  fields.h  get_values.c  get_values.h  methods.c  methods.h  modifiers.c  modifiers.h  reference_type.c  reference_type.h  signature.c  signature.h
src/msg/virtual_machine/: CMakeLists.txt  all_classes.c  all_classes.h  all_classes_with_generic.c  all_classes_with_generic.h  all_modules.c  all_modules.h  all_threads.c  all_threads.h  capabilities.c  capabilities.h  capabilities_new.c  capabilities_new.h  class_paths.c  class_paths.h  classes_by_signature.c  classes_by_signature.h  create_string.c  create_string.h  dispose.c  dispose.h  dispose_objects.c  dispose_objects.h  exit.c  exit.h  hold_events.c  hold_events.h  id_sizes.c  id_sizes.h  instance_counts.c  instance_counts.h  redefine_classes.c  redefine_classes.h  release_events.c  release_events.h  resume.c  resume.h  set_default_stratum.c  set_default_stratum.h  suspend.c  (+7 more)
test/: CMakeLists.txt
test/e2e/: CMakeLists.txt
test/e2e/fixtures/: AnotherClass.java  CMakeLists.txt  SimpleServer.java  start-server.sh  stop-server.sh
test/e2e/msg/: CMakeLists.txt
test/e2e/msg/01_virtual_machine/: 01_version.c  02_classes_by_signature.c  03_all_classes.c  04_all_threads.c  05_top_level_thread_groups.c  06_dispose.c  07_id_sizes.c  08_suspend.c  09_resume.c  10_exit.c  11_create_string.c  12_capabilities.c  13_class_paths.c  14_dispose_objects.c  15_hold_events.c  16_release_events.c  17_capabilities_new.c  18_redefine_classes.c  19_set_default_stratum.c  20_all_classes_with_generic.c  21_instance_counts.c  22_modules.c  CMakeLists.txt
test/e2e/msg/02_reference_type/: 01_signature.c  02_class_loader.c  03_modifiers.c  04_fields.c  05_methods.c  06_get_values.c  CMakeLists.txt
test/e2e/util/: CMakeLists.txt  delay.c  delay.h
test/unit/msg/01_virtual_machine/: 01_version.c  02_classes_by_signature.c  03_all_classes.c  04_all_threads.c  05_top_level_thread_groups.c  06_dispose.c  07_id_sizes.c  08_suspend.c  09_resume.c  10_exit.c  11_create_string.c  12_capabilities.c  13_class_paths.c  14_dispose_objects.c  15_hold_events.c  16_release_events.c  17_capabilities_new.c  18_redefine_classes.c  19_set_default_stratum.c  20_all_classes_with_generic.c  21_instance_counts.c  22_all_modules.c  CMakeLists.txt
test/unit/msg/02_reference_type/: 01_signature.c  02_class_loader.c  03_modifiers.c  04_fields.c  05_methods.c  CMakeLists.txt
